fix focus indicator gap height; and mdash to pause characters

--- a/bm/squirt.css
+++ b/bm/squirt.css
@@ -58,7 +58,7 @@
 
 .sq-focus-indicator-gap {
   position: absolute;
-  height: 140px;
+  height: 111px;
   background-color: #f6f6f6;
   width: 2px;
   left: -2px;
